--- a/soheil_tajahmadi/week_02/day_01/html-labs/busyhands/css/main.css
+++ b/soheil_tajahmadi/week_02/day_01/html-labs/busyhands/css/main.css
@@ -6,16 +6,51 @@
 
 #blurb {
   float: right;
-}
-
-#socialnav {
-
+  width: 25%;
+  margin-top: 2.5%;
 }
 
 #photobanner {
   width: 100%;
   box-shadow: 0px 25px 36px -10px black;
   margin-bottom: 30px;
+}
+
+#socialMedia ul {
+  width: 38%;
+}
+
+#socialMedia ul li.linkedIn {
+	background:url(../images/socialNav.png) 0px 64px;
+}
+#socialMedia ul li.twitter {
+	background:url(../images/socialNav.png) -60px 64px;
+}
+
+#socialMedia ul li.facebook {
+	background:url(../images/socialNav.png) -120px 64px;
+}
+
+#socialMedia ul li.rss {
+	background:url(../images/socialNav.png) -180px 64px;
+}
+
+
+
+#socialMedia ul li.linkedIn:hover {
+	background:url(../images/socialNav.png) 0px 0px;
+}
+
+#socialMedia ul li.twitter:hover {
+	background:url(../images/socialNav.png) -60px 0px;
+}
+
+#socialMedia ul li.facebook:hover {
+	background:url(../images/socialNav.png) -120px 0px;
+}
+
+#socialMedia ul li.rss:hover {
+	background:url(../images/socialNav.png) -180px 0px;
 }
 
 .homebox {
@@ -47,17 +82,23 @@
     text-shadow: 1px 1px 4px;
 }
 
-.logosocial {
-  display: inline-block;
-}
+
 
 .requestquote {
   width: 100%;
-  float: none;
-  border: 2px grey solid;
+  border-top: 1px grey solid;
+  border-left: 1px grey solid;
+  border-right: 1px, white, solid;
+  border-bottom: 1px, white, solid;
   font-size: 12px;
+  float: left;
+}
 
-
+.requestquote p {
+  max-width: 70%;
+  margin: 2.5%;
+  margin-right: 2.5%;
+  display: inline-block;
 }
 
 .homebox img {
@@ -72,7 +113,7 @@
 }
 
 main {
-  background-color: #f0f0f0;
+  background-color: #f1f1f1;
   width: 80%;
   font-family: sans-serif;
   width: 90%;
@@ -88,4 +129,8 @@ body {
 nav {
   background-color: black;
   padding-left: 40px;
+}
+
+footer {
+  color: white;
 }
