--- a/tim_caldwell/week_02/day_02/jenn_schiffer_fansite/css/layout.css
+++ b/tim_caldwell/week_02/day_02/jenn_schiffer_fansite/css/layout.css
@@ -4,14 +4,18 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|VT323');
 
 body {
-    height:100%;
+
 }
 body {
+  display: grid;
+  grid-template: 100% / 1fr 960px 1fr;
   background-color: #00b3fa; /* dark grey #222222 */
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  height: 100%;
   /* letter-spacing: .125em; */
+  /* align-content: stretch; */
 }
 
 .container {
@@ -19,7 +23,8 @@ body {
   margin: 0 auto;
   background: #FFF;
   padding: 1em;
-  height: 100%;
+  grid-column: 2;
+  height: 100%
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -37,18 +42,29 @@ nav a {
   display: inline-block;
   background-color: lime;
   padding: 1rem;
-  margin-top: -1rem;
+  margin-top: -.5rem;
   margin-left: -1rem;
   margin-right: 1.5rem;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
   font-family: 'VT323', monospace;
   font-size: 1.5em;
+  transition: all .15s ease-in-out
 }
 
 nav a.active {
   background-color: hotpink;
   font-weight: bold;
+  margin-top: -1rem;
+}
+
+nav a:hover:not(.active) {
+  background: lime; /* older browsers */
+  background: -moz-linear-gradient(top,  lime 0%, #019901 100%);
+  background: -webkit-linear-gradient(top,  lime 0%, #019901 100%);
+  background: linear-gradient(to bottom,  lime 0%, #019901 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='hotpink', endColorstr='#e93cec',GradientType=0 );
+  margin-top: -1rem;
 }
 
 header h1 {
@@ -169,4 +185,36 @@ main div img.bio {
 
 .twitter-tweet {
   margin: auto;
+}
+
+figcaption {
+  text-align: center;
+  font-style: italic;
+}
+
+.button {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  background-color: lime;
+  margin: 0 auto;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  padding: .75rem 1.25rem;
+  font-weight: 700;
+  text-decoration: none;
+  box-shadow: 3px 3px 3px rgba(0,0,0,0.25);
+}
+
+.button:hover {
+  background-color: hotpink;
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.25);
+  color: white;
+}
+
+p.centered {
+  text-align: center;
 }
