--- a/shelley_zhang/week_02/day_01/html-labs/busyhands/css/style.css
+++ b/shelley_zhang/week_02/day_01/html-labs/busyhands/css/style.css
@@ -9,13 +9,14 @@
 
 /* body */
 
-.wrapper {
+#wrapper {
   margin: 0 auto;
-  width: 100%;
+  max-width: 960px;
 }
 
 body {
 
+  background-image: url("images/body.jpg");
   margin: 0px;
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
@@ -23,6 +24,12 @@ body {
 	font-size: 13px;
 	line-height: 1.1;
 	background: #FFF;
+
+}
+
+.socialmedia {
+  position: absolute;
+  clip: rect(60px,249px,249px,0px);
 
 }
 
@@ -40,8 +47,8 @@ nav ul li {
 }
 
 /* content */
-
+/*
 .topbox {
   background-color: #e6e6e6;
   padding: 500px;
-}
+} */
