--- a/tim_caldwell/week_02/day_03/catwalking/css/style.css
+++ b/tim_caldwell/week_02/day_03/catwalking/css/style.css
@@ -1,13 +1,53 @@
-.moveleft {
+.moveright {
+  top: 15vh;
   /* image-orientation: flip */
 }
 
+.container {
+  width: 100%;
+}
 
-.moveright {
+.moveleft {
+  top: 15vh;
   -moz-transform: scaleX(-1);
   -o-transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
   filter: FlipH;
   -ms-filter: "FlipH";
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 auto;
+  min-width: 400px;
+}
+
+.buttons button {
+  margin: auto 2vw;
+  background-color: lightgrey;
+}
+
+.buttons button.active {
+  background-color: orange;
+}
+
+.pawprintright {
+  position: absolute;
+  background-image: url('../res/dog-paw.svg');
+  transform: rotate(98deg) rotateX(25deg) rotateY(72deg);
+  width: 20px;
+  height: 20px;
+  z-index: -1;
+}
+
+.pawprintleft {
+  position: absolute;
+  background-image: url('../res/dog-paw.svg');
+  transform: rotate(-98deg) rotateX(-25deg) rotateY(72deg);
+  width: 20px;
+  height: 20px;
+  z-index: -1;
 }
