--- a/luke_eaton/week_02/day_01/homework/html-labs/ecardly/css/style.css
+++ b/luke_eaton/week_02/day_01/homework/html-labs/ecardly/css/style.css
@@ -1,20 +1,31 @@
-/* 
+/*
 Project Name: Ecard.ly
-Client: General Assembly 
+Client: General Assembly
 Author: Christopher Castig | @castig
 Developer @GA in NYC
 */
 
 /* Box Model Hack */
+
+
 * {
      -moz-box-sizing: border-box; /* Firexfox */
      -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
      box-sizing: border-box; /* IE */
 }
 
+* {
+ border: red solid 1px;
+}
+
+.absolute {
+  position: absolute;
+  left: %30;
+}
+
 /* Clear fix hack */
 .clearfix:after {
-     content: ".";
+     content: "";
      display: block;
      clear: both;
      visibility: hidden;
@@ -28,3 +39,28 @@ Developer @GA in NYC
 
 
 
+
+
+/*.headerReplacement {
+   text-indent: -9999px;
+   width: 800;
+   height: 250px;
+   background: url( "images/logo.png" )#cccccc no-repeat;
+   margin: 0;
+}*/
+
+#container {
+  width: : 940px;
+
+
+
+}
+
+body {
+  background-color: #d6d6d6;
+  Text Color: #000000;
+  font-size: 12px;
+  }
+  h2 {
+    font-size: 20px;
+  }
