--- a/robert_maculewicz/week_02/day_02/Donald_Knuth/biography/css/style.css
+++ b/robert_maculewicz/week_02/day_02/Donald_Knuth/biography/css/style.css
@@ -1,3 +1,7 @@
+* {
+  border: 1px solid red;
+}
+
 
 @import url('https://fonts.googleapis.com/css?family=Aldrich|IBM+Plex+Mono');
 body {
@@ -7,6 +11,7 @@ background-size: 90%;
   margin: 0px;
   padding: 10px;
   font-family: 'Aldrich', sans-serif;
+
 }
 .container {
   width: 960px;
@@ -42,7 +47,7 @@ main img {
 }
 aside {
   display: inline-block;
-  width: 21%; /* 75% + 21% is about 100% */
+  width: 19%; /* 75% + 21% is about 100% */
   height: 251px;
   vertical-align: top;
   background-color: #b9bdd1;
@@ -82,23 +87,43 @@ footer{
 }
 
 
+
+
+
+
+
+
+
+
+
+/*
 .container1 {
   width: 960px;
   margin: auto;
-  background-color: #f5f5fa;
+  background-color: white;
   padding: 3em;
   border-radius: 0%;
 }
 .body1 {
    background-color: white;
-/*  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBHfu4ojsjbGXStB22gAdHuDRRtobAAmTJ6X9oTD-YboilQoFZ');*/
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBHfu4ojsjbGXStB22gAdHuDRRtobAAmTJ6X9oTD-YboilQoFZ');
 background-size: 90%;
+width: 60px;
   margin: 0px;
   padding: 0px;
   font-family: 'Aldrich', sans-serif;
-  font-size:
+
 }
 .header1{
-  font-size: 45px;
+  font-size: 35px;
   text-align: center;
 }
+
+#left {
+  display: inline-block;
+  width: 500px;
+}
+
+#right {
+  display: inline-block;
+}*/
