--- a/william_lieu/week_02/day_02/Larry_wall/css/style.css
+++ b/william_lieu/week_02/day_02/Larry_wall/css/style.css
@@ -1,34 +1,43 @@
 @import url('https://fonts.googleapis.com/css?family=Bangers|Boogaloo|Cinzel|IM+Fell+English+SC|Monoton|Robot+Slab');
 header {
+  background: url("");
   padding: 5px;
-
   text-align: justify;
-
   font-family: 'Work sans', sans-serif;
+  color: red;
 }
 
 body {
   background-color: white;
   font-family: 'Boogaloo', cursive;
   margin: 20px;
+  color: white;
 }
 
 h1 {
-  font-family: 'Monoton', cursive;
+  font-family:
   font-size: 55px;
-  color: black;
+  color: white;
   text-align: center;
+  height: 100px;
 }
 
 h2 {
   font-family: 'Roboto Slab', serif;
   font-size: 22px;
 }
+ul {
+  background: #007ba7;
+  height:  60px;
+  width: 1260px;
+  text-align:center;
 
+}
 nav {
   font-size: 25px;
   float: right;
-  color: #007ba7;
+  color: white;
+  display: inli;
 }
 
 main img {
@@ -36,6 +45,12 @@ main img {
   width: 45%;
 }
 
+li {
+  display: inline;
+  padding: 0px 10px 0px 10px;
+  color: white;
+
+}
 img {
   width: 55%;
   height: 55%;
@@ -55,7 +70,7 @@ p {
 
 .header a {
   float: left;
-  color: #007ba7;
+  color: white;
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -91,20 +106,22 @@ p {
     float: none;
     display: block;
     text-align: left;
+
   }
   .header-right {
     float: none;
+
   }
 }
 
 .container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 1em;
-
+  max-width: 1560px;
+  /* margin: 0 auto;
+  padding: 1em; */
+/*
   border-bottom-right-radius: 1em;
-  border-bottom-left-radius: 1em;
-  background: url("../image/wall3.jpg");
+  border-bottom-left-radius: 1em; */
+  background: url("http://www.360wango.com/1/wp-content/uploads/2014/05/Best-Website-Background-Images: 29.jpg;");
 }
 
 .imgborder {
