--- a/sherine_foo/week_04/day_03/booksI/views/layout.erb
+++ b/sherine_foo/week_04/day_03/booksI/views/layout.erb
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Book I</title>
     <link rel="stylesheet" href="/css/master.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Monoton|Paytone+One|Varela+Round');
+    </style>
   </head>
   <body>
 
