fixed books yay

--- a/sarah_bradd/week_04/books/views/books.erb
+++ b/sarah_bradd/week_04/books/views/books.erb
@@ -1,5 +1,4 @@
 <p>
   <strong><%= @book_info %></strong>
 </p>
-<img src=<%= @thumbnail%>>
-<img src=<%= @imageLinks>>
+<img src="<%= @thumbnailURL %>">
