--- a/sarah_bradd/week_04/books/views/home.erb
+++ b/sarah_bradd/week_04/books/views/home.erb
@@ -1,5 +1,5 @@
-<form action="">
+<form action="/book">
   <label>Book Search Selector</label>
-  <input type="text" name="@book_info" placeholder="Jaws" required>
+  <input type="text" name="book_info" placeholder="Jaws" required>
   <button>Get Book</button>
 </form>
