--- a/lucas_padua/week_04/day_03/homework/views/layout.erb
+++ b/lucas_padua/week_04/day_03/homework/views/layout.erb
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/css/master.css">
     <title>Books I</title>
   </head>
+  <!-- <img src="img/library.jpeg"> -->
   <body>
 
     <h1>Books I</h1>
