--- a/tim_caldwell/week_04/day_04/crud/views/games.erb
+++ b/tim_caldwell/week_04/day_04/crud/views/games.erb
@@ -1,9 +1,9 @@
 <h1>The Games Library</h1>
 <% @games.each do |game|%>
   <div class="gametile">
-  <h3 class="col-span2"><%= game['title']%></h3>
-  <img src="<%= game['art']%>" >
+  <img class="row-span3" src="<%= game['art']%>" >
+  <h3><%= game['title']%></h3>
   <p><%= game['blurb']%></p>
-  <span class="col-span2"><a class="abutton" href="/games/<%= game['id']%>">View</a></span>
+  <span><a class="abutton" href="/games/<%= game['id']%>">View</a></span>
   </div>
 <% end %>
