--- a/tim_caldwell/week_04/day_04/crud/views/games_new.erb
+++ b/tim_caldwell/week_04/day_04/crud/views/games_new.erb
@@ -1,12 +1,12 @@
 <h1>New Game Entry</h1>
 <form action="/games" method="post">
-  <label for="title"></label>
+  <label for="title">Title:</label>
   <input type="text" id="title" name="title" />
-  <label for="genre"></label>
+  <label for="genre">Genre:</label>
   <input type="text" id="genre" name="genre" />
-  <label for="blurb"></label>
+  <label for="blurb">About:</label>
   <input type="text" id="blurb" name="blurb" />
-  <label for="art"></label>
+  <label for="art">Image:</label>
   <input type="url" id="art" name="art" />
   <button class="abutton">Create Record</button>
 </form>
