--- a/robert_maculewicz/week_04/day_03/book/views/home.erb
+++ b/robert_maculewicz/week_04/day_03/book/views/home.erb
@@ -1,5 +1,5 @@
-<form action="/result">
-  <label>Book name:</label>
-  <input type="text" name="book_info" placeholder="Title" required>
-  <button>Serch</button>
+<form class="" action="/results">
+  <input type="text" name="title" placeholder="eg Twelfth Night">
+  <button>Find the Book</button>
+
 </form>
