--- a/robert_maculewicz/week_04/day_03/book/views/layout.erb
+++ b/robert_maculewicz/week_04/day_03/book/views/layout.erb
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Book</title>
+    <title></title>
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
 
-    <div class="container">
-      <h1>Books catalog</h1>
+    <h1>Look for a Book</h1>
 
-      <%= yield %>
-    </div>
+    <%= yield %>
+
   </body>
 </html>
