--- a/robert_maculewicz/week_04/day_03/book/views/result.erb
+++ b/robert_maculewicz/week_04/day_03/book/views/result.erb
@@ -1,5 +1,8 @@
-<p>
-  <strong><%= @book_title %></strong>
-  closed at
-  <strong>$<%= @price %></strong>
-</p>
+<p> <%= @book_title %> </p>
+<p> <%= @author %> </p>
+<p> <%= @published_date %> </p>
+<p> <%= @description %> </p>
+<p> <%= @rating %> </p>
+<p> <%= @smallThumbnail %> </p>
+<p> <%= @thumbnail %> </p>
+<img src=<%= @thumbnail %> >
