--- a/sherine_foo/week_04/day_04/camino/views/caminos_index.erb
+++ b/sherine_foo/week_04/day_04/camino/views/caminos_index.erb
@@ -3,9 +3,8 @@
 <% @caminos.each do |camino| %>
   <p>
 
-    <a href="/caminos/<%= camino["id"] %>">
-      Day <%= camino["day"] %>
-    </br>
+    <a id:"all_font" href="/caminos/<%= camino["id"] %>">
+      Day <%= camino["day"] %> :
       <%= camino["city"] %>
     </br>
 
