--- a/sherine_foo/week_04/day_04/camino/views/layout.erb
+++ b/sherine_foo/week_04/day_04/camino/views/layout.erb
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>Camino</title>
     <link rel="stylesheet" href="/css/master.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Monoton|Paytone+One|Varela+Round');
+    </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Chela+One|Lobster');
+    </style>
   </head>
   <body>
 
