updated css style

--- a/zabrina_lagamayo/week_04/day_04/views/home.erb
+++ b/zabrina_lagamayo/week_04/day_04/views/home.erb
@@ -1,2 +1,3 @@
 <h1>Welcome to Instrument Repository</h1>
-<p>Explore this website to discover new instruments or add a new instrument</p>
+<p class="welcome">Explore this website to discover new instruments or add a new instrument</p>
+<img class="cartoon" src="/img/cartoon.png" alt="">
