--- a/caleb_rivers/week_04/day_03/book_search/views/layout.erb
+++ b/caleb_rivers/week_04/day_03/book_search/views/layout.erb
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
+    <div class="container">
     <h1>Welcome to the book Search</h1>
-    <%= yield %>
+    <p><%= yield %></p>
+    </div>
   </body>
 </html>
