--- a/caleb_rivers/week_04/day_03/book_search/views/result.erb
+++ b/caleb_rivers/week_04/day_03/book_search/views/result.erb
@@ -1,5 +1,8 @@
-<p>The cover of the book is:</p>
 
-<img src=<%= @book_img%>>
+<div class="box">
+  <p>The cover of the book is:</p>
 
-<p>Description: <%= @description %> </p>
+  <img src=<%= @book_img%>>
+
+  <p>Description: <%= @description %> </p>
+</div>
