--- a/caleb_rivers/week_04/day_03/book_search/views/home.erb
+++ b/caleb_rivers/week_04/day_03/book_search/views/home.erb
@@ -1,8 +1,12 @@
-<p>Please enter the book title you wish to search</p>
 
-<form class="" action="/result">
-  <label>Book Title: </label>
-  <input type="text" name="book" placeholder="Jaws">
-  <button>Search</button>
 
-</form>
+<div class="box">
+  <p>Please enter the book title you wish to search</p>
+
+  <form class="" action="/result">
+    <label>Book Title: </label>
+    <input type="text" name="book" placeholder="Jaws">
+    <button>Search</button>
+
+  </form>
+</div>
