--- a/sonia_parker/week_04/day_05/eminem/views/songs_new.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/songs_new.erb
@@ -3,7 +3,7 @@
   <label>Name</label>
   <input type="text" name="name" placeholder="Song Name" required autofocus>
   <label>youtube Url</label>
-  <input type="url" name="youtube_url" required placeholder="https://">
+  <input type="text" name="youtube_url" required placeholder="https://">
 
   <label>Choose Album</label>
   <select  name="album_id">
