--- a/sonia_parker/week_04/day_05/eminem/views/songs_show.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/songs_show.erb
@@ -8,7 +8,9 @@
 
 <% unless @song["youtube_url"].nil? %>
 <p><%= @song["youtube_url"]%></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/<%=@song['youtube_url'] %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <%end%>
+<p>Album: <%= @album["name"]%></p>
 
 <div class="controls">
   <a class="btn btn-primary" href="/songs/<%= @song["id"]%>/edit">Edit</a>
