--- a/shelley_zhang/week_04/day_05/videogames_ar/views/developers_index.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/developers_index.erb
@@ -2,8 +2,8 @@
 
 <% @developers.each do |developer| %>
   <p>
-    <a href="/developers/<%= developer["id"] %>">
-      <%= developer["name"] %>
+    <a href="/developers/<%= developer.id %>">
+      <%= developer.name %>
     </a>
   </p>
 <% end %>
