--- a/shelley_zhang/week_04/day_05/videogames_ar/views/developers_show.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/developers_show.erb
@@ -1,11 +1,24 @@
-<h1><%= @developer['name'] %></h1>
-<h2><%= @developer['genre'] %></h2>
+<h1><%= @developer.name %></h1>
+<h2><%= @developer.headquarters</h2>
+
+<% unless @developer.videogames.empty? %>
+  <h2>Associated Games:</h2>
+  <ul>
+    <% @developer.videogames.each do |developer| %>
+      <li>
+        <a href="/videogames/<%= videogame.id %>">
+          <%= videogame.name %>
+        </a>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
 
 <% unless @developer['image'].nil? %>
-  <img class="feature" src="<%= @developer['image'] %>" />
+  <img class="feature" src="<%= @developer.image %>" />
 <% end %>
 
 <div class="controls">
-  <a href="/developers/<%= @developer['id'] %>/edit">Edit</a>
-  <a href="/developers/<%= @developer['id'] %>/delete">Delete</a>
+  <a href="/developers/<%= @developer.id %>/edit">Edit</a>
+  <a href="/developers/<%= @developer.id %>/delete">Delete</a>
 </div>
