--- a/shelley_zhang/week_04/day_05/videogames_ar/views/developers_new.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/developers_new.erb
@@ -1,6 +1,6 @@
 <h1>Add New Developer</h1>
 
-<form action="/Developers" method="post">
+<form action="/developers" method="post">
   <label>Name:</label>
   <input type="text" name="name" placeholder="Developer" required autofocus>
   <label>Headquarters:</label>
