--- a/shelley_zhang/week_04/day_05/videogames_ar/views/videogames_show.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/videogames_show.erb
@@ -1,14 +1,14 @@
 <h1><%= @videogame['name'] %></h1>
 <h2>Genre: <%= @videogame['genre'] %></h2>
 
-<!-- # <% unless @videogame.developer.nil? %>
+<% unless @videogame.developer.nil? %>
    <h2>
      Developer:
      <a href="/developers/<%= @videogame.developer.id %>">
        <%= @videogame.developer.name %>
      </a>
    </h2>
- <% end %> -->
+ <% end %>
 
 <% unless @videogame['image'].nil? %>
   <img class="feature" src="<%= @videogame['image'] %>" />
