--- a/shelley_zhang/week_04/day_05/videogames_ar/views/developers_edit.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/developers_edit.erb
@@ -1,6 +1,6 @@
 <h1>Edit Developer</h1>
 
-<form action="/Developers/<%= @developer.id %>" method="post">
+<form action="/developers/<%= @developer.id %>" method="post">
   <label>Name:</label>
   <input type="text" name="name" value="<%= @developer.name %>" required autofocus>
   <label>Headquarters:</label>
