--- a/shelley_zhang/week_04/day_05/videogames_ar/views/developers_new.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/developers_new.erb
@@ -4,7 +4,7 @@
   <label>Name:</label>
   <input type="text" name="name" placeholder="Developer" required autofocus>
   <label>Headquarters:</label>
-  <input type="text" name="genre" placeholder="Headquarters" required>
+  <input type="text" name="headquarters" placeholder="Headquarters" required>
   <label>Image:</label>
   <input type="url" name="image" placeholder="http://...">
 
