--- a/sonia_parker/week_04/day_05/eminem/views/albums_index.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/albums_index.erb
@@ -1,13 +1,17 @@
 <div class="row">
   <div class="col">
-    <h1>Eminem Albums</h1>
+    <h1 class="text-center">Eminem Albums</h1>
+    <ul>
+
+
     <% @albums.each do |album| %>
-    <p>
-      <a href="/albums/<%= album["id"]%>">
+  <li>
+      <a class="text-dark"href="/albums/<%= album["id"]%>">
         <%= album["name"]%>
       </a>
-    </p>
+    </li>
     <% end %>
+      </ul>
   </div>
 
 </div>
