--- a/sonia_parker/week_04/day_05/eminem/views/albums_new.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/albums_new.erb
@@ -1,14 +1,25 @@
-<h1>New Album</h1>
-<form action="/albums" method="post">
-  <label>Name</label>
-  <input type="text" name="name" placeholder="Album Name" required autofocus>
+<h1 class="text-center">New Album</h1>
+<div class="row">
+  <div class="col ">
+
+
+<form class="m-auto p-3"action="/albums" method="post">
+  <div class="form-group">
+    <label>Name</label>
+    <input type="text" name="name" placeholder="Album Name" required autofocus>
+  </div>
+    <div class="form-group">
   <label>Cover Album Url</label>
   <input type="url" name="cover_url" required placeholder="https://">
+  </div>
+  <div class="form-group">
   <label>Release Year</label>
   <input type="text" name="release_year" required placeholder="1999">
+  </div>
 
 
-
-  <button>Create</button>
+  <button class="btn btn-success">Create</button>
   </select>
 </form>
+</div>
+</div>
