--- a/sonia_parker/week_04/day_05/eminem/views/home.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/home.erb
@@ -1,6 +1,13 @@
 <div class="row">
-  <div class="col">
-    <h1>Eminem Songs Database</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
+  <div class="col mt-3">
+    <div class="card m-auto" style="width: 30rem;">
+      <img class="card-img-top" src="http://projectrevolver.org/wp-content/uploads/2017/10/eminem-885x498.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h2 class="card-title">Eminem Music Database</h2>
+        <p class="card-text">Click through your fave songs and albums, add new ones and view YouTube video.</p>
+        <a href="/songs" class="btn btn-dark">Go To Eminem Songs</a>
+        <a href="/albums" class="btn btn-dark">Go To Eminem Albums</a>
+
+      </div>
+    </div>  </div>
 </div>
