--- a/sonia_parker/week_04/day_05/eminem/views/layout.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/layout.erb
@@ -3,30 +3,61 @@
   <head>
     <meta charset="utf-8">
     <title>Eminem Songs Database</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" ></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
     <div class="container">
-      <ul class="nav justify-content-center bg-dark text-white">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="/songs">Songs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="/songs/new">New Song</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="/albums">Albums</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="/albums/new">New Album</a>
+      <!--navbar bootstrap component  -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
         </li>
       </ul>
+      <ul class="navbar-nav">
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="#">Songs</a>
+        </li> -->
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="#">Albums</a>
+        </li> -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Songs
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/songs"><i class="fas fa-music"></i> See All Songs</a>
+
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/songs/new"><i class="fas fa-plus-circle"></i> Add New Song</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="/albums" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Albums
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/albums"><i class="fas fa-music"></i> See All Albums</a>
+
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/albums/new"><i class="fas fa-plus-circle"></i> Add New Album</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
       <%= yield %>
+      <footer class="footer text-center">Copyright Sonicakes 2018</footer>
     </div>
   </body>
 </html>
