--- a/sonia_parker/week_04/day_05/eminem/views/songs_index.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/songs_index.erb
@@ -1,13 +1,17 @@
 <div class="row">
   <div class="col">
-    <h1>All Eminem Songs</h1>
+    <h1 class="text-center">All Eminem Songs</h1>
+    <ul>
+
+
     <% @songs.each do |song| %>
-    <p>
-      <a href="/songs/<%= song["id"]%>">
+  <li>
+      <a class="text-dark h3"href="/songs/<%= song["id"]%>">
         <%= song["name"]%>
       </a>
-    </p>
+  </li>
     <% end %>
+      </ul>
   </div>
 
 </div>
