--- a/sonia_parker/week_04/day_05/eminem/views/songs_new.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/songs_new.erb
@@ -1,10 +1,20 @@
-<h1>New Song</h1>
-<form action="/songs" method="post">
+<h1 class="text-center">New Song</h1>
+<div class="row">
+  <div class="col-6 m-auto">
+
+
+<form action="/songs" class="m-auto p-3"method="post">
+  <div class="form-group">
+
+
   <label>Name</label>
   <input type="text" name="name" placeholder="Song Name" required autofocus>
+  </div>
+  <div class="form-group">
   <label>youtube Url</label>
   <input type="text" name="youtube_url" required placeholder="https://">
-
+  </div>
+  <div class="form-group">
   <label>Choose Album</label>
   <select  name="album_id">
     <option></option>
@@ -12,7 +22,9 @@
     <option value ="<%= album.id %>"><%= album.name %> </option>
     <% end %>
   </select>
-
-  <button>Create</button>
+  </div>
+  <button class="btn btn-success">Create</button>
   </select>
 </form>
+</div>
+</div>
