--- a/shelley_zhang/week_04/day_05/videogames_ar/views/developers_show.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/developers_show.erb
@@ -1,5 +1,5 @@
-<h1><%= @developer.name %></h1>
-<h2><%= @developer.headquarters %></h2>
+<h1>Name: <%= @developer.name %></h1>
+<h2>Headquarters: <%= @developer.headquarters %></h2>
 
 <% unless @developer.videogames.empty? %>
   <h2>Associated Games:</h2>
