--- a/shelley_zhang/week_04/day_05/videogames_ar/views/layout.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/layout.erb
@@ -9,10 +9,10 @@
     <div class="container">
       <nav>
         <a href="/">Home</a>
-        <a href="/videogames">Complete List of Video Games</a>
+        <a href="/videogames">Video Games</a>
         <a href="/videogames/new">New Game</a>
         |
-        <a href="/developers">Complete List of Developers</a>
+        <a href="/developers">Developers</a>
         <a href="/developers/new">New Developer</a>
       </nav>
 
