--- a/shelley_zhang/week_04/day_05/videogames_ar/views/videogames_show.erb
+++ b/shelley_zhang/week_04/day_05/videogames_ar/views/videogames_show.erb
@@ -1,4 +1,4 @@
-<h1><%= @videogame['name'] %></h1>
+<h1>Name: <%= @videogame['name'] %></h1>
 <h2>Genre: <%= @videogame['genre'] %></h2>
 
 <% unless @videogame.developer.nil? %>
