added styles to forms

--- a/sonia_parker/week_04/day_05/eminem/views/albums_edit.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/albums_edit.erb
@@ -4,7 +4,7 @@
 
 <h1 class="text-center">Edit Album</h1>
 
-<form class="p-3"action="/albums/<%= @album['id']%>" method="post">
+<form class="p-3 bg-dark text-white"action="/albums/<%= @album['id']%>" method="post">
   <div class="form-group">
 
 
