--- a/sonia_parker/week_04/day_05/eminem/views/layout.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/layout.erb
@@ -63,7 +63,7 @@
       <%= yield %>
       <div class="row mt-auto fixed-bottom">
         <div class="col-12">
-          <footer class="footer text-center">Copyright Sonicakes 2018</footer>
+          <footer class="footer h3 text-center">Copyright 	&copy; Sonicakes 2018</footer>
         </div>
       </div>
     </div>
