--- a/sonia_parker/week_04/day_05/eminem/views/albums_new.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/albums_new.erb
@@ -1,9 +1,9 @@
 <h1 class="text-center">New Album</h1>
 <div class="row">
-  <div class="col ">
+  <div class="col-6 m-auto ">
 
 
-<form class="m-auto p-3"action="/albums" method="post">
+<form class="m-auto p-3 bg-dark text-white"action="/albums" method="post">
   <div class="form-group">
     <label>Name</label>
     <input type="text" name="name" placeholder="Album Name" required autofocus>
