--- a/sonia_parker/week_04/day_05/eminem/views/songs_new.erb
+++ b/sonia_parker/week_04/day_05/eminem/views/songs_new.erb
@@ -3,7 +3,7 @@
   <div class="col-6 m-auto">
 
 
-<form action="/songs" class="m-auto p-3"method="post">
+<form class="bg-dark text-white p-3"action="/songs" class="m-auto p-3"method="post">
   <div class="form-group">
 
 
@@ -11,8 +11,8 @@
   <input type="text" name="name" placeholder="Song Name" required autofocus>
   </div>
   <div class="form-group">
-  <label>youtube Url</label>
-  <input type="text" name="youtube_url" required placeholder="https://">
+  <label>youtube Url (include 11-symbol combination after "v=")</label>
+  <input type="text" name="youtube_url" required placeholder="wfWIs2gFTAM">
   </div>
   <div class="form-group">
   <label>Choose Album</label>
