Week 4, weekend Homework, working many to many movie lists, no styling

--- a/soheil_tajahmadi/week_04/day_05/movies/views/list_of_lists.erb
+++ b/soheil_tajahmadi/week_04/day_05/movies/views/list_of_lists.erb
@@ -1,3 +1,4 @@
+<a href="/add/list">Make a new Movie List</a>
 
 <ul>
 
@@ -5,6 +6,9 @@
 <li>
 <%= list["name"]%>
 
+<form class="button" action="/list/view/<%= list["id"]%>" method="get">
+  <button type="submit" >View</button>
+</form>
 <form class="button" action="/list/edit/<%= list["id"]%>" method="post">
   <button type="submit" >Edit</button>
 </form>
