--- a/soheil_tajahmadi/week_04/day_05/movies/views/movie_list.erb
+++ b/soheil_tajahmadi/week_04/day_05/movies/views/movie_list.erb
@@ -15,5 +15,10 @@
   <button type="submit" >Delete</button>
 </form>
 
+<form class="button" action="/movie/addtolist/<%= movie["id"]%>" method="post">
+  <button type="submit" >Add to a list</button>
+</form>
+
+
 </div>
 <% end%>
