--- a/soheil_tajahmadi/week_04/day_03/public/css/master.css
+++ b/soheil_tajahmadi/week_04/day_03/public/css/master.css
@@ -1,9 +1,3 @@
-body {
-
-
-
-}
-
 
 header {
   margin: 0 auto;
@@ -16,6 +10,9 @@ header {
   height: 100px;
 }
 
+header a:visited {
+  color: white;
+}
 
 main {
   height: 70vh;
