--- a/sarah_bradd/week_04/wineandcheese/views/cheeses_show.erb
+++ b/sarah_bradd/week_04/wineandcheese/views/cheeses_show.erb
@@ -1,11 +1,11 @@
-<h1><%= @cheese['type'] %></h1>
+<h1><%= @cheese['name'] %></h1>
 <% unless @cheese.wines.empty? %>
 
 <h2>Cheeses:</h2>
 <ul>
   <% @cheese.wines.each do |wine| %>
   <li>
-    <a href="/wines/<%= wine.id %>"><% wine.name %></a>
+    <a href="/wines/<%= wine.id %>"><%= wine.name %></a>
   </li>
   <% end %>
 </ul>
