--- a/sarah_bradd/week_04/wineandcheese/views/wines_new.erb
+++ b/sarah_bradd/week_04/wineandcheese/views/wines_new.erb
@@ -1,9 +1,9 @@
-<h1> this is a new wine </h1>
+<h1> Input your wine! </h1>
 
 <form action="/wines" method="post">
 <label>Type:</label>
-<input type="text" name="type" placeholder="Wine name" required autofocus>
 
+<input type="text" name="wine_type" placeholder="Wine name" required autofocus>
 <label>Name:</label>
 <input type="text" name="name" placeholder="type name" required>
 
