--- a/soheil_tajahmadi/week_04/day_05/movies/views/movie_list.erb
+++ b/soheil_tajahmadi/week_04/day_05/movies/views/movie_list.erb
@@ -1,24 +1,36 @@
+<div class="movieList">
+
+
+
 <% @movies.each do |movie| %>
-<div class="">
+<div class="movieItem">
+
+<div class="movieImage">
+  <img src="<%= movie["thumbnail"]%>" alt="">
+</div>
+
+<div class="movieInfo">
+  <p><em> <%= movie["name"]%> </em> </p>
+  <p> <%= movie["year"]%>  </p>
+  <p>Director: <%= movie["director"]%></p>
+  <p>Cast: <%= movie["cast"]%></p>
+
+<div class="controls">
 
 
-<img src="<%= movie["image"]%>" alt="">
-<p><em> <%= movie["name"]%> </em> </p>
-<p> <%= movie["year"]%>  </p>
-<p>Director: <%= movie["director"]%></p>
-<p>Cast: <%= movie["cast"]%></p>
+  <form class="button" action="/movie/edit/<%= movie["id"]%>" method="post">
+    <button type="submit" >Edit</button>
+  </form>
+  <form class="button" action="/movie/delete/<%= movie["id"]%>" method="post">
+    <button type="submit" >Delete</button>
+  </form>
 
-<form class="button" action="/movie/edit/<%= movie["id"]%>" method="post">
-  <button type="submit" >Edit</button>
-</form>
-<form class="button" action="/movie/delete/<%= movie["id"]%>" method="post">
-  <button type="submit" >Delete</button>
-</form>
-
-<form class="button" action="/movie/addtolist/<%= movie["id"]%>" method="post">
-  <button type="submit" >Add to a list</button>
-</form>
-
-
+  <form class="button" action="/movie/addtolist/<%= movie["id"]%>" method="post">
+    <button type="submit" >Add to</button>
+  </form>
+</div>
+</div>
 </div>
 <% end%>
+
+</div>
