--- a/robert_maculewicz/week_04/day_04/uni/views/layout.erb
+++ b/robert_maculewicz/week_04/day_04/uni/views/layout.erb
@@ -13,6 +13,7 @@
         <a href="/students">All Students</a>
         <a href="/students/new">New Students</a>
       </nav>
+      <a href="https://www.tripadvisor.com.au/LocationPhotoDirectLink-g255060-d4102830-i74526174-University_of_Sydney-Sydney_New_South_Wales.html#74526174"><img alt="" src="https://media-cdn.tripadvisor.com/media/photo-s/04/71/2d/de/university-of-sydney.jpg"/></a><br/>
       <%= yield %>
     </div>
 
