--- a/ej_willard/week_04/day_05/artists_albums/views/home.erb
+++ b/ej_willard/week_04/day_05/artists_albums/views/home.erb
@@ -3,22 +3,33 @@
   <p>Keep track of all your sick beats and their creators!</p>
 </div>
 
+<!-- <div class="categories">
 
-<!-- <div class='c1'> NOTE maybe change this to display artists or albums?
+  <img src="/images/recordhome.jpg" />
+  <button><a href="albums_index.erb"</a>View Albums</button>
 
-  <img src="/images/catalogue.jpg" />
-  <button><a href="records_index.erb"</a>View Collection</button>
-</div>
-<div class='c2'>
-  <img src="/images/neednew.jpg" />
-  <button><a href="records_new.erb"</a>Add a freshy</button>
+
+  <img src="/images/amy.jpg" />
+  <button><a href="artists_index.erb"</a>View Artists</button>
+
 </div> -->
+
 <footer>
 <p>EJ Willard &copy;2018</p>
- <div class="socials">
-  <a href="https://ellijayne.github.io/project0/"><img class="blackicon githubicon" src="/images/githubicon.png" /></a>
-  <a href="https://www.instagram.com/elli_jayne/"><img class="blackicon instaicon" src="/images/instaicon.png" /></a>
-  <a href="https://www.linkedin.com/in/elli-jayne-willard-8673b010b/"><img class="blackicon linkedinicon" src="/images/linkedinicon.png" /></a>
-  <a href="https://twitter.com/elli_jayne"><img class="blackicon twittericon" src="/images/twittericon.svg" /></a>
-</div>
+
+  <!-- BLACK SOCIALS -->
+   <!-- <div class="blacksocials">
+      <a href="https://ellijayne.github.io/project0/"><img class="blackicon githubicon" src="/images/githubblackgood.jpg" /></a>
+      <a href="https://www.instagram.com/elli_jayne/"><img class="blackicon instaicon" src="/images/instablackgood.png" /></a>
+      <a href="https://www.linkedin.com/in/elli-jayne-willard-8673b010b/"><img class="blackicon linkedinicon" src="/images/linkedinicon.png" /></a>
+      <a href="https://twitter.com/elli_jayne"><img class="blackicon twittericon" src="/images/twittericon.svg" /></a>
+  </div> -->
+
+  <!-- WHITE SOCIALS -->
+   <div class="whitesocials">
+      <a href="https://ellijayne.github.io/project0/"><img class="whiteicon" id="githubicon" src="/images/githubwhitegood.png" /></a>
+      <a href="https://www.instagram.com/elli_jayne/"><img class="whiteicon instaicon" src="/images/instawhitegood.png" /></a>
+      <a href="https://www.linkedin.com/in/elli-jayne-willard-8673b010b/"><img class="whiteicon linkedinicon" src="/images/linkediniconwhite.png" /></a>
+      <a href="https://twitter.com/elli_jayne"><img class="whiteicon twittericon" src="/images/twittericonwhite.png" /></a>
+    </div>
 </footer>
