--- a/ej_willard/week_04/day_05/artists_albums/views/layout.erb
+++ b/ej_willard/week_04/day_05/artists_albums/views/layout.erb
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/master.css">
+    <!-- <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script> -->
     <title>Sound Purchases</title>
   </head>
   <body>
