--- a/ej_willard/week_04/day_05/artists_albums/public/css/master.css
+++ b/ej_willard/week_04/day_05/artists_albums/public/css/master.css
@@ -7,8 +7,9 @@ html, body {
 
 body {
   background-image: url("../images/recordhands.jpg");
-  background-repeat: no-repeat;
+  background-repeat:no-repeat;
   background-size:cover;
+  background-attachment:fixed;
   font-family: 'Fjalla One', sans-serif;
   color: white;
 }
@@ -101,62 +102,212 @@ h1 {
 
 }
 
-.c1 img {
-height: 25vh;
-border-radius: 20%;
-border-bottom: solid 2px rgba(255, 255, 255, 0.8);
-border-right: solid 2px rgba(255, 255, 255, 0.8);
-}
+/* SHOW STYLES */
 
-.c2 img {
-  height: 25vh;
-  border-radius: 20%;
-  border-bottom: solid 2px rgba(255, 255, 255, 0.8);
-  border-right: solid 2px rgba(255, 255, 255, 0.8);
-  /* text-shadow: 2px, 2px, 2px rgba(0, 0, 0, 0.8); */
-}
-
-.c1 button, .c2 button {
-
-background-color: black;
-/* color: white; */
-border-radius: 4px;
-height: 2.5em;
-}
-
-.c1 a, .c2 a {
-  text-decoration:  none;
+.artist_link {
+  text-decoration: none;
   color: white;
 }
 
+.artist_link:hover {
+  color: lightgrey;
+  transition: 1s;
+}
+
+/* SHOWING ARTISTS */
+.topofshow_artists {
+  display: grid;
+  grid-template-columns: 2(repeat, 1fr);
+}
+
+.artist_info {
+  grid-column-start: 1;
+  grid-column-end: 1;
+}
+
+.artist_info a {
+  text-decoration: none;
+  color: white;
+}
+
+.artist_info a:hover {
+  color: grey;
+  transition: 1s;
+}
+
+
+.artist_info img {
+  max-width: 60vh;
+  max-height: 60vh;
+  border-radius: 5px;
+}
+
+.album_info {
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-template-rows: 3(repeat, 1fr);
+  text-align: left;
+  box-sizing: border-box;
+}
+
+.album_info li {
+  list-style-type: none;
+}
+
+.album_info img {
+  max-height: 20vh;
+  max-width: 20vh;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.album_info a {
+  text-decoration: none;
+  color: white;
+}
+
+/* EDIT/DELETE LINK STYLES */
+
+.edit_delete {
+  text-decoration: none;
+  color: white;
+}
+
+.edit_delete:hover {
+  color: lightgrey;
+  transition: 1s;
+}
+
+/* INDEX STYLES */
+
+.topofindex {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+}
+.index_hero img {
+  max-width: 30vh;
+  max-height: 30vh;
+  display: inline-flex;
+  border-radius: 5px;
+}
+
+
+.topofindex a{
+  text-decoration: none;
+  color: white;
+}
+
+.topofindex a:hover {
+  color: grey;
+  transition: 2s;
+}
+
+/* ADDING ARTISTS/ALBUMS STYLES */
+
+.add_form {
+  display:inline-grid;
+  grid-column: 1, auto;
+  grid-auto-rows: 6;
+  grid-row-gap: 1em;
+}
+
+.add_form label {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+}
+.add_form button {
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  height: 2.5em;
+}
+.add_form input{
+  background-color: lightgrey;
+  border-radius: 4px;
+  height: 2em;
+}
+
+
+
+
+/* HOME PAGE FOOTER STYLES */
 footer {
   background-color: rgba(211, 211, 211, 0.7);
   display: grid;
   grid-template-rows: 2;
-  max-width: 100vw;
-  max-height: 20vh;
-  box-sizing: border-box;
+  width: 100%;
+  height: 13vh;
   text-align: center;
 }
 
-.blackicon {
+.whiteicon {
+  grid-row-start: 2;
   max-width: 5vh;
   max-height: 5vh;
   display:inline-flex;
   align-items: center;
   padding-bottom: 1em;
-
+  padding: 0;
+  margin: 0 auto;
 }
 
-/* .twittericon:hover{
-  background:url(../images/twittericonwhite.png);
+#githubicon:hover {
+  background-color:black;
+  border-radius: 100%;
 }
 
-.instaicon:hover{
-  background:url(../images/instaiconwhite.png);
-} */
+.whiteicon:hover {
+  background-color:black;
+  border-radius: 10px;
+}
+
+.feature {
+  border-radius: 5px;
+  align-items: center;
+  max-width: 28vw;
+  max-height: 28vw;
+}
 
 footer p {
   text-align: center;
   color: black;
 }
+
+
+/* .githubicon {
+  grid-column-start: 1;
+  z-index: 1;
+  position: absolute;
+  padding-left: 10vw;
+}
+
+.instaicon {
+  grid-column-start: 2;
+  z-index: 2;
+  position: absolute;
+  padding-left: 7vw;
+}
+
+.linkedinicon {
+  grid-column-start: 3;
+  z-index: 3;
+  position: absolute;
+  padding-left: 4vw;
+}
+
+.twittericon {
+  grid-column-start: 4;
+  z-index: 4;
+  position: absolute;
+  padding-left: 1vh;
+} */
+
+/* .blackicon {
+  /* display: grid;
+  grid-auto-columns: repeat(4, 1fr); */
+  /* grid-row: 2;
+  max-width: 5vh;
+  max-height: 5vh;
+  display:inline-flex; */
+  /* align-items:flex-start; */
+  /* padding-bottom: 1em;  */
