--- a/ej_willard/week_04/day_05/artists_albums/views/albums_show.erb
+++ b/ej_willard/week_04/day_05/artists_albums/views/albums_show.erb
@@ -1,22 +1,23 @@
-<h1>Records are always a Sound Purchase</h1>
+<div class="topofshow">
+  <h1>Records are always a Sound Purchase</h1>
 
-<h1><%= @album['name'] %></h1>
-<h2>Year: <%= @album['year'] %></h2>
+  <h1><%= @album['name'] %></h1>
+  <% unless @album.artist.nil? %>
+    <h2>
+      Artist:
+      <a class="artist_link" href="/artists/<%= @album.artist.id %>">
+        <%= @album.artist.name %>
+      </a>
+    </h2>
+  <% end %>
+  <h3>Year: <%= @album['year'] %></h3>
 
-<% unless @album.artist.nil? %>
-  <h2>
-    Artist:
-    <a href="/artists/<%= @album.artist.id %>">
-      <%= @album.artist.name %>
-    </a>
-  </h2>
-<% end %>
-
-<% unless @album.image.nil? %>
-  <img class="feature" src="<%= @artist['image'] %>" />
-<% end %>
-
-<div class="controls">
-  <a href="/albums/<%= @album['id'] %>/edit">Edit</a>
-  <a href="/albums/<%= @album['id'] %>/delete">Delete</a>
+  <% unless @album['image'].nil? %>
+    <img class="feature" src="<%= @album['image'] %>" />
+  <% end %>
+  <div class="controls">
+    <a class="edit_delete" href="/albums/<%= @album['id'] %>/edit">Edit</a>
+    |
+    <a class="edit_delete" href="/albums/<%= @album['id'] %>/delete">Delete</a>
+  </div>
 </div>
