--- a/ej_willard/week_04/day_05/artists_albums/views/artists_edit.erb
+++ b/ej_willard/week_04/day_05/artists_albums/views/artists_edit.erb
@@ -1,10 +1,12 @@
-<h1>Edit Artist</h1>
+<div class="topofedit">
+  <h1>Edit Artist</h1>
 
-<form action="/artists/<%=@artist.id%>" method="post">
-  <label>Name:</label>
-  <input type="text" name="name" value="<%=@artist.name%>" placeholder="Artist's Name" required autofocus>
-  <label>Image:</label>
-  <input type="url" name="image" value="<%=@artist.image%>" placeholder="http://...">
+  <form class="add_form" action="/artists/<%=@artist.id%>" method="post">
+    <label>Name:</label>
+    <input type="text" name="name" value="<%=@artist.name%>" placeholder="Artist's Name" required autofocus>
+    <label>Image:</label>
+    <input type="url" name="image" value="<%=@artist.image%>" placeholder="http://...">
 
-  <button>Update Artist!</button>
-</form>
+    <button>Update Artist!</button>
+  </form>
+</div>
