--- a/ej_willard/week_04/day_05/artists_albums/views/artists_new.erb
+++ b/ej_willard/week_04/day_05/artists_albums/views/artists_new.erb
@@ -1,10 +1,13 @@
-<h1>New Artist</h1>
 
-<form action="/artists" method="post">
-  <label>Name:</label>
-  <input type="text" name="name" placeholder="Artist's Name" required autofocus>
-  <label>Image:</label>
-  <input type="url" name="image" placeholder="http://...">
+<div class="topofadd">
+  <h1>New Artist</h1>
 
-  <button>Create</button>
-</form>
+  <form class="add_form" action="/artists" method="post">
+    <label>Name:</label>
+    <input type="text" name="name" placeholder="Artist's Name" required autofocus>
+    <label>Image:</label>
+    <input type="url" name="image" placeholder="http://...">
+
+    <button>Add Artist</button>
+  </form>
+</div>
